page cache done

--- a/index.html
+++ b/index.html
@@ -37,6 +37,20 @@ body{
 .me-toolbar{
 	float:right;
 }
+.page_container.up{
+transform:translate3d(0px,-1020px,0px)
+},
+.page_container.down{
+transform:translate3d(0px,1020px,0px)}
+.page_container.left{
+transform:translate3d(-720px,0px,0px)}
+.page_container.right
+{transform:translate3d(720px,0px,0px)}
+.page_container.middle:
+{transform:translate3d(0px,px,0px)}
+.none{
+display:none}
+
 </style>
 <script type="text/javascript">
 
