--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="lib/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="lib/require.js"></script>
 	<script type="text/javascript" src="lib/renderjs.js"></script>
+	<!--<script type="text/javascript" src="lib/log4javascript.js"></script>-->
     <!--<script src="cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.js"></script>
     <script src="cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>-->
 
@@ -53,7 +54,7 @@ display:none}
 
 </style>
 <script type="text/javascript">
-
+//var log = log4javascript.getLogger("main");
 </script>
 </head>
 <body>
